# kinesis-to-lambda-handson

./: .gitignore  .pylintrc  README.md  cdk.json  package-lock.json  package.json  pyproject.toml
lib/: kinesis-to-lambda-handson-stack.ts
src/: index.py  insert_dummy_data.py
test/: kinesis-to-lambda-handson.test.ts
