[tool.poetry]
name = "kinesis-to-lambda-handson"
version = "0.1.0"
description = ""
authors = ["Hiroya Akita <akky.develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
mypy = "^0.782"
pylint-quotes = "^0.2.1"
boto3 = "^1.14.14"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
